Pequenas modificações no startup